--- a/WeLearn/M1-html-css/Labs/Lab1-GoogleHighSchool/index.html
+++ b/WeLearn/M1-html-css/Labs/Lab1-GoogleHighSchool/index.html
@@ -23,16 +23,33 @@
   <div id="header">
     <h1>Google High School</h1>
     <h3>Home of your average High School aged Googler</h3>
-    <!-- Insert your super clever slogan that may or may not have several puns in it -->
+    <h4>Make Peace Not War</h4>
   </div>
   <div id="links">
     <a class="link" href="http://google.com">Search</a>
-    <!-- Change the two tags below so the links connect to your favorite place to study and share -->
-    <a class="link" href="http://google.com">Learn</a>
-    <a class="link" href="http://google.com">Share</a>
+    <a class="link" href="https://www.wikipedia.org/">Learn</a>
+    <a class="link" href="https://www.redditinc.com/">Share</a>
+  </div>
+  <div id="info"> {
+    background-color: pink;
+  }
+    <ul>
+      <li>Diversity</li>
+      <li>Respect</li>
+      <li>Fun</li>
+      <li>Sunny</li>
+      <li>Equality</li>
+    </ul>
+    <img class="animation"
+    src="https://www.voicesofyouth.org/sites/default/files/images/2019-03/school.jpg"/>
   </div>
   <div id="info">
-    <!-- Insert your list of things that make google high school great here -->
-    <!-- Insert an image of google high school here -->
+    <h2>Some of our students don't go to school</h2>
+    <img class="students"
+    src="http://semmelweis.hu/english/files/2011/02/student_life_se-450x300.png"/>
+    <img class="students"
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSdh-PvvBUeXPO4-327dc5DVMn0z9vtBB3HwWFeAo1SOoY9S9EY"/>
+    <img class="students"
+    src="https://greatergood.berkeley.edu/images/uploads/Hopeful_student_1.jpg"/>
   </div>
 </body>
