--- a/WeLearn/M1-html-css/Labs/lab2-format-fanatics/format_two.html
+++ b/WeLearn/M1-html-css/Labs/lab2-format-fanatics/format_two.html
@@ -22,15 +22,18 @@
 </head>
 <body>
   <div class="container">
-    <div id="b" class="border side">B</div>
+    <div id="b" class="border side1">B</div>
     <div id="b" class="border top">B</div>
-    <div id="b" class="border side">B</div>
+    <div id="b" class="border side2">B</div>
     <div id="title">Title</div>
 
-    <!-- Insert three photo divs here -->
-    <!-- Insert a caption div here -->
+      <div id="p1" class="photo">C</div>
+      <div id="p2" class="photo">C</div>
+      <div id="p3" class="photo">C</div>
 
-    <div id="date">Date</div>
+   <div id="caption" class="container">Caption</div>
+
+   <div id="date">Date</div>
     <div id="b" class="border bottom">B</div>
   </div>
 </body>
